Search user design + chat design + profile edit

--- a/src/AppBundle/Resources/public/css/global.sass
+++ b/src/AppBundle/Resources/public/css/global.sass
@@ -12,7 +12,10 @@ a
 	transition-duration: none
 
 	&:hover
-		color: #444
+		color: $main-color-hover
+
+	&:active
+		color: $main-color-active
 
 a[ng-click]
 	cursor: pointer
