--- a/src/PP/UserBundle/Resources/views/Search/search_result.html.twig
+++ b/src/PP/UserBundle/Resources/views/Search/search_result.html.twig
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block body %}   
-    <div id="containerApp" class="demand-list" > 
+    <div id="containerApp" class="main-left" > 
         <div> </div>
         <div ng-controller="searchResultController as searchResult" ng-init="searchResult.init()" >
             
