--- a/src/PP/UserBundle/Resources/views/Profile/show_profile.html.twig
+++ b/src/PP/UserBundle/Resources/views/Profile/show_profile.html.twig
@@ -15,12 +15,12 @@
     {# display profile header #}
     <section class="profile" ng-controller="profileController as profile" >
         <div id="profileHeaderContainer">
-            <div class="banner">
+            <div class="profile-cover">
                 {% if pageProfile.coverImage != null %}
-                    <img src="{{ asset(pageProfile.coverImage.webPath("1500x500")) }}" alt="{{ pageProfile.coverImage.alt }}">
+                    <div class="banner" style="background-image: url({{ asset(pageProfile.coverImage.webPath("1500x500")) }})"></div>
+                    <div class="overlay"></div> 
                 {% endif %}
-                <div class="overlay"></div>
-            </div>                
+            </div>      
             <div class="profile-details">
                 <a class="avatar"  href="#" title="">
                   <img src="{{ asset(pageProfile.profilImage.webPath("70x70")) }}" alt="{{ pageProfile.profilImage.alt }}">
