Fix chat + profile request upvote

--- a/src/PP/UserBundle/Resources/views/Profile/show_profile.html.twig
+++ b/src/PP/UserBundle/Resources/views/Profile/show_profile.html.twig
@@ -82,7 +82,7 @@
                         {% if pageProfile.followersNb != null %}{{ pageProfile.followersNb }}{% else %}0{% endif %}
                     </li>                                                         
                     <li class="link">
-                        <a href="#" title="">{{ pageProfile.contact }}</a>                    
+                        <a href="http://{{ pageProfile.contact }}" target="_blank" rel="nofollow" title="">{{ pageProfile.contact }}</a>                    
                     </li>
                 </ul>
             </div>
