--- a/src/PP/UserBundle/Resources/views/Profile/edit_profile_form.html.twig
+++ b/src/PP/UserBundle/Resources/views/Profile/edit_profile_form.html.twig
@@ -27,7 +27,7 @@
         <h1 class="username">{{ form_row(editUserForm.name, {'attr':  {'placeholder': 'Name'}}) }}</h1>
         <p class="bio">{{ form_row(editUserForm.description, {'attr':  {'placeholder': 'Insert your bio here...', 'class': 'bio', 'rows': '3'}}) }}</p>
         <input class="button green" type="submit" value="Save" />
-        <a id="cancelButton" class="button" ng-click="profile.cancelEditProfile()">Cancel</a>
+        <a href="" id="cancelButton" class="button" ng-click="profile.cancelEditProfile()">Cancel</a>
 
         <ul class="details">
             <li>
