--- a/src/AppBundle/Resources/public/css/button.sass
+++ b/src/AppBundle/Resources/public/css/button.sass
@@ -19,6 +19,10 @@ button, .button
 		background: #444
 		color: white
 
+	&:disabled
+		background: #FAFAFA
+		color: #CCC
+
 	&.red
 		background: $main-color
 		color: white
