--- a/src/PP/HeaderBundle/Resources/views/header/header.html.twig
+++ b/src/PP/HeaderBundle/Resources/views/header/header.html.twig
@@ -1,7 +1,7 @@
 <div id="headerApp"  >
     <div id="headerController" ng-controller="headerController as header">
         <h1 class="logo">
-            <a target="_self" href="{{ path('pp_request_homepage') }}" title="Prestapic">Prestapic</a> 
+            <a tabindex="1" target="_self" href="{{ path('pp_request_homepage') }}" title="Prestapic">Prestapic</a> 
         </h1>
 
         <div class="search">                                                        
