--- a/src/PP/HeaderBundle/Resources/views/header/filters.html.twig
+++ b/src/PP/HeaderBundle/Resources/views/header/filters.html.twig
@@ -1,7 +1,7 @@
 <form ng-controller="filtersController as filters" name="pp_request_homepage_form" novalidate ng-submit="filters.submitForm()" >
     <input type="hidden" name="search_action" value='{{ url('pp_request_homepage', {}, true) }}' />
     
-    <input tabindex="1" autocomplete="off" ng-focus="header.showSearchOptions(filters.searchQuery)" ng-change="header.showSearchChoise(filters.searchQuery)" name="name" type='text' class="main-search stopPropagation" ng-model='filters.searchQuery' searchQueryname='search_query' placeholder="Find pictures, requests or users on Prestapic..." />
+    <input id="main_search_input" tabindex="1" autocomplete="off" ng-focus="header.showSearchOptions(filters.searchQuery)" ng-change="header.showSearchChoise(filters.searchQuery)" name="name" type='text' class="main-search stopPropagation" ng-model='filters.searchQuery' searchQueryname='search_query' placeholder="Find pictures, requests or users on Prestapic..." />
        
     <div class="search-options-list" style="display:none;" id="searchUser" class="stopPropagation">
         <ul>
@@ -15,7 +15,9 @@
                 <a tabindex="3" ng-click="filters.submitForm()" href="" class="infos-all-search" >
                     Show all results for <strong>{% verbatim %}{{ filters.searchQuery }}{% endverbatim %}</strong>...
                 </a>
-            </li>
+            </li>            
+        </ul>
+        <div tabindex="4" id="tabindex_filter_last"></div>
     </div>
 
     <ul style="display: none;" id="searchOptions" class="search-options stopPropagation" >
